# ChangeLog for app-shells/gentoo-bashcomp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.28 2009/04/12 18:18:48 ranger Exp $

  12 Apr 2009; Brent Baude <ranger@gentoo.org>
  gentoo-bashcomp-20090222.ebuild:
  stable ppc64, bug 256596

  11 Apr 2009; nixnut <nixnut@gentoo.org> gentoo-bashcomp-20090222.ebuild:
  ppc stable #256596

  11 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  gentoo-bashcomp-20090222.ebuild:
  Stable for HPPA (bug #256596).

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gentoo-bashcomp-20090222.ebuild:
  alpha/arm/ia64/s390/sparc/x86 stable wrt #256596

  10 Apr 2009; Olivier Crête <tester@gentoo.org>
  gentoo-bashcomp-20090222.ebuild:
  Stable on amd64, bug #256596

  10 Apr 2009; Olivier Crête <tester@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Remove version requirement, breaks with bash-completion versioning change

*gentoo-bashcomp-20090222 (23 Feb 2009)

  23 Feb 2009; Jeremy Olexa <darkside@gentoo.org>
  +gentoo-bashcomp-20090222.ebuild:
  Version bump. Includes new portage options and a new repoman bash-completion
  module

*gentoo-bashcomp-20080521-r1 (21 Feb 2009)

  21 Feb 2009; Jeremy Olexa <darkside@gentoo.org>
  +gentoo-bashcomp-20080521-r1.ebuild:
  Now use the 'eselect way' for gentoo-bashcomp. This is desired for future
  development of the gentoo bash-completion modules

*gentoo-bashcomp-20080521 (21 May 2008)

  21 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +gentoo-bashcomp-20080521.ebuild:
  Version bump

  04 May 2008; Peter Volkov <pva@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Use berlios mirror://, bug #218657, thank Gilles Dartiguelongue for
  report.

  27 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  gentoo-bashcomp-20050516.ebuild:
  Remove NEWS from dodoc, bug #203330

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.
