@@ -1,9 +1,6 @@
-DIST gentoo-bashcomp-20050516.tar.bz2 20330 RMD160 9915f073c218b683bbf75f82df982eda41c2f5e3 SHA1 713167567b4323f9ffcca9c38ee58f3b23b41fdd SHA256 7b9588997873078694a5696b797996fc75b6149e2dc522ee87f451a532c4208c
-DIST gentoo-bashcomp-20080521.tar.bz2 20667 RMD160 926bed30455cd7d6062a5f3258726de800789286 SHA1 38845f1d6b5b430684a2690e9ffa267c591ea4b2 SHA256 faa2b2291ccb620ec89c55516b6aab8fead729d5dc83fa079ab5f44eb3ec182f
 DIST gentoo-bashcomp-20090222.tar.bz2 20852 RMD160 adf75e25480827ef7b35da262ca0512df435907b SHA1 472cc282387bfe1810b8ed2b00152fb5f76666c4 SHA256 d8df4f9babab6101602c5a7069d80daac9defc9d9683f5b4a91671ae40c83b39
-EBUILD gentoo-bashcomp-20050516.ebuild 996 RMD160 b1d051073c67b16c14a7ab9b9be8c825d4e0ff46 SHA1 fe62e13e8c7fc86f07b400a11ce27e72f5fec34f SHA256 d298140130dca4ffc476574ce2eab71c6e4cf5f4893070998479d13193086c39
-EBUILD gentoo-bashcomp-20080521-r1.ebuild 981 RMD160 4cbb4f5f89dae931ac34ad55160a7aa7015ad2e6 SHA1 351d7e0c4631a65e272b4de0a18846e19ac6a45e SHA256 4928916d31cdd0d104ecf545d86682c3a0ce486c03b90140170689234a45b49f
-EBUILD gentoo-bashcomp-20080521.ebuild 981 RMD160 20d9e3bf90c328dedaacc82c94cd9b7efe36dc16 SHA1 82183af32938b6bf95a82952079a4e9842d8619d SHA256 d6a8fe4bb6a5c49187462d533c358a4016addb8bff7aefdfb20f7fe1ffc69b0f
+DIST gentoo-bashcomp-20090613.tar.bz2 22612 RMD160 51180223278d7c6933bccd8f1e9bfa32310e741a SHA1 ee5b210d71ee3fe81023cc8c619e5268a1bad6eb SHA256 aec54270106cdaf590042742b84869cb4bc4e05583ccb4513ae4b7d127a9717e
 EBUILD gentoo-bashcomp-20090222.ebuild 1120 RMD160 f5a7e82c957d55d10563d94b356ea9c917f214ba SHA1 96cc2f09e263822dad0c18b83ddbb9698fa82480 SHA256 71c422e46a0437d27e40e144494a16c02203739662b185532f0fb74794ac9e6f
-MISC ChangeLog 4491 RMD160 0370ae5fc825579c44d6f36befdf63f2f835bcc6 SHA1 b244436395645084938d65e7d7d1f5331e08c1e6 SHA256 dbc8eabb5c2d4798d937dc6b305aa097a910514a8f979625047f3f5960824454
+EBUILD gentoo-bashcomp-20090613.ebuild 1197 RMD160 9efe5c69282478cdb2c3ec7e14097b0405aa1cf8 SHA1 219d1c15865122638bc3654ef5b37bf1514f96c2 SHA256 b7e97f3130f3482e36ea844ee5ea5e42764e131513c1524ba39a427c30f2a5b2
+MISC ChangeLog 4840 RMD160 ed5ffdcc57c2ac4267e3637e159349e9b8c1a7e2 SHA1 814749a200687aa8185c35df42c91ac273b05ce1 SHA256 083e3ae9d62965b35398e31cdb615073dbdc809226b1e4e1d9bb9b2c0b9b8047
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
